cabal-version:      2.4
name:               haskell-lifegame
version:            1.0.0.0
author:             HosokawaR
maintainer:         thin.river.jp@gmail.com
extra-source-files: CHANGELOG.md

executable haskell-lifegame
    main-is:          Main.hs
    other-modules:    Config
    build-depends:    base ^>=4.16.4.0
                    , random
                    , ansi-terminal
    hs-source-dirs:   app
    default-language: Haskell2010
